Fix readme / Update swagger
