# src/api/swagger.yaml
@@ -45,7 +45,7 @@ paths:
           description: ''
           required: true
           schema:
-            $ref: '#/definitions/Protocol'
+            $ref: '#/definitions/ProtocolFile'
       responses:
         '405':
           description: Invalid input
@@ -72,7 +72,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/Protocol'
+              $ref: '#/definitions/ProtocolFile'
         '400':
           description: Invalid tag value
   '/protocols/{protocol_id}':
@@ -95,7 +95,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/Protocol'
+            $ref: '#/definitions/ProtocolFile'
         '400':
           description: Invalid ID supplied
         '404':
@@ -128,7 +128,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/Protocol'
+            $ref: '#/definitions/ProtocolFile'
         '405':
           description: Invalid input
     delete:
@@ -177,12 +177,16 @@ paths:
       operationId: findLogById
       produces:
         - application/json
-      parameters: []
+      parameters:
+        - name: log_id
+          in: path
+          required: true
+          type: string
       responses:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/Log'
+            $ref: '#/definitions/LogFile'
   /device:
     get:
       tags:
@@ -231,12 +235,25 @@ paths:
         default:
           description: successful operation
 definitions:
-  Log:
+  LogFile:
     type: object
     properties:
       id:
         type: string
         example: 15644F61-CBFC-4876-8DD4-1325269AB2DA
+      log:
+        $ref: '#/definitions/Log'
+  ProtocolFile:
+    type: object
+    properties:
+      id:
+        type: string
+        example: 15644F61-CBFC-4876-8DD4-1325269AB2DA
+      protocol:
+        $ref: '#/definitions/Protocol'
+  Log:
+    type: object
+    properties:
       name:
         type: string
   Progress:
@@ -249,9 +266,6 @@ definitions:
       name:
         type: string
         example: Demo Protocol
-      protocol_id:
-        type: string
-        example: 15644F61-CBFC-4876-8DD4-1325269AB2DA
       lid_temp:
         type: integer
         format: int32
